# openparallax

./: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVAL-RECAP.md  HEURISTIC_CURRENT.md  HEURISTIC_PROPOSAL.md  LICENSE  Makefile  PAPER-DATA.md  README.md  SECURITY.md  TIER3-RECAP.md  channels-bridge  go.mod  go.sum  install.ps1  install.sh  wrangler.jsonc
audit/: audit_test.go  integrity.go  logger.go  types.go  viewer.go
channels/: adapter.go
chronicle/: chronicle.go  chronicle_test.go  types.go
crypto/: canary.go  crypto_test.go  encrypt.go  encrypt_test.go  hash.go  random.go
docs/: changelog.md  index.md  manual-testing-guide.md  package-lock.json  package.json  sqlite-vec-spike-report.md  system-audit-report.md  testing-guide.md
e2e/: e2e_test.go  harness.go  helpers.go  mock_llm.go  mock_responses.go  rest_client.go  tests_concurrency_test.go  tests_ifc_taint_test.go  tests_ifc_test.go  tests_lifecycle_test.go  tests_pipeline_test.go  tests_security_test.go  tests_subagent_test.go  tests_zz_restart_test.go  ws_client.go
eval-results/: README.md
ifc/: ifc.go  ifc_test.go  policy.go  policy_test.go  types.go
llm/: anthropic.go  config.go  factory.go  google.go  llm_test.go  ollama.go  openai.go  openai_test.go  provider.go  registry.go  tooluse_debug_test.go
mcp/: config.go  manager.go
memory/: chunker.go  chunker_test.go  embedding.go  indexer.go  indexer_test.go  manager.go  memory_test.go  search.go  store.go  types.go  vector.go  vector_native.go  vector_test.go  watcher.go
platform/: browser.go  browser_darwin.go  browser_linux.go  browser_windows.go  denylist.go  denylist_darwin.go  denylist_linux.go  denylist_windows.go  detect.go  kill_unix.go  kill_windows.go  normalize.go  paths.go  platform_test.go  process.go  process_unix.go  process_windows.go  safe_commands.go  safe_commands_unix.go  safe_commands_windows.go  shell.go  shell_parse.go  shell_parse_test.go  system.go  system_darwin.go  system_linux.go  system_windows.go
policies/: default.yaml  permissive.yaml  strict.yaml
prompts/: evaluator-v1.md
sandbox/: canary.go  canary_darwin.go  canary_linux.go  canary_other.go  canary_windows.go  required_darwin.go  required_linux.go  required_other.go  required_windows.go  sandbox.go  sandbox_darwin.go  sandbox_linux.go  sandbox_other.go  sandbox_test.go  sandbox_windows.go  seccomp_linux.go  seccomp_linux_amd64.go  seccomp_linux_arm64.go
shield/: gateway.go  ifc.go  ifc_test.go  logger.go  mcpgateway.go  mcpgateway_test.go  metadata.go  pipeline.go  ratelimit.go  safe_commands.go  safe_commands_test.go  safe_commands_unix_test.go  safe_commands_windows_test.go  shield_test.go  tier0_policy.go  tier0_policy_test.go  tier1_classifier.go  tier1_heuristic.go  tier1_onnx.go  tier1_onnx_local.go  tier1_onnx_local_test.go  tier1_rules.go  tier1_tier1_test.go  tier2_evaluator.go  tier2_prompt.go  types.go  (+2 more)
wrappers/python/audit/: README.md  pyproject.toml
wrappers/python/audit/openparallax_audit/: __init__.py  audit.py  bridge.py  types.py
wrappers/python/channels/: README.md  pyproject.toml
wrappers/python/channels/openparallax_channels/: __init__.py  bridge.py  channels.py  types.py
wrappers/python/memory/: README.md  pyproject.toml
wrappers/python/memory/openparallax_memory/: __init__.py  bridge.py  memory.py  types.py
wrappers/python/sandbox/: README.md  pyproject.toml
wrappers/python/sandbox/openparallax_sandbox/: __init__.py  bridge.py  sandbox.py
wrappers/python/shield/: README.md  pyproject.toml
wrappers/python/shield/openparallax_shield/: __init__.py  shield.py  types.py
(+655 files in other folders)
