[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openparallax-audit"
version = "0.1.0"
description = "Python wrapper for the OpenParallax audit module"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["openparallax", "audit", "security", "ai-agent"]

[project.urls]
Documentation = "https://docs.openparallax.dev/audit/python"
Repository = "https://github.com/openparallax/openparallax"

[tool.hatch.build.targets.wheel]
packages = ["openparallax_audit"]
