[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openparallax-channels"
version = "0.0.0"
description = "Python wrapper for the OpenParallax channels module"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["openparallax", "channels", "messaging", "ai-agent"]

[project.urls]
Documentation = "https://docs.openparallax.dev/channels/python"
Repository = "https://github.com/openparallax/openparallax"

[tool.hatch.build.targets.wheel]
packages = ["openparallax_channels"]
